<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/calibri_bold"
        android:text="@string/enterotp"
        android:textColor="@color/textblack"
        android:textSize="26dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/enterotptonumber"
        android:textColor="@color/textblack"
        android:textSize="16dp"
        android:fontFamily="@font/calibri_regular"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/waittext"
        android:textSize="16dp"
        android:fontFamily="@font/calibri_light"/>

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/resendtime"
                android:textColor="@color/textblack"
                android:textSize="12sp"
                android:fontFamily="@font/calibri_bold"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_shape"
            android:text="@string/verify"
            android:textColor="@color/purewhite"
            android:fontFamily="@font/calibri_bold"
            android:textAllCaps="false"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/homeline" />


    </LinearLayout>


</LinearLayout>
