<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/recoverpassword"
                android:textColor="@color/textblack"
                android:textSize="24dp"
                android:fontFamily="@font/calibri_bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/selectcredentials"
                android:textColor="@color/textblack"
                android:textSize="16sp"
                android:fontFamily="@font/calibri_regular" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/mobilenumber"
                android:textColor="@color/textblack"
                android:textSize="@dimen/fifteen_sp"
                android:fontFamily="@font/calibri_bold" />

            <EditText
                android:id="@+id/et_mn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:maxLength="10"
                android:padding="10dp"
                android:textColor="@color/textblack"
                android:textSize="@dimen/sixteen_sp"
                android:fontFamily="@font/calibri_regular" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/rcvr_send_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_shape"
            android:text="@string/sendotp"
            android:textColor="@color/purewhite"
            android:textSize="@dimen/eighteen_sp"
            android:textAllCaps="false"
            android:fontFamily="@font/calibri_bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/homeline" />
    </LinearLayout>
</RelativeLayout>