<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/calibri_bold"
        android:text="@string/payment_summary"
        android:textColor="@color/black_2"
        android:textSize="@dimen/eighteen_sp"
        android:gravity="center"
        android:padding="@dimen/fifteen_dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="100dp"
            android:paddingRight="30dp">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:background="@drawable/rsz_payment_success" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/payment_successful"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black_2"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/calibri_regular"
                android:text="@string/payment_processed"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black_2"
                android:textSize="@dimen/eighteen_sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btnHome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/red"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/home"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/eighteen_sp" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>