<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/calibri_bold"
        android:text="@string/enterotp"
        android:textColor="@color/textfieldblack"
        android:textSize="26dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/calibri_bold"
        android:text="@string/enterotptonumber"
        android:textColor="@color/textfieldblack"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90sp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextone"
            android:layout_width="40sp"
            android:layout_height="42sp"
            android:background="@color/blue"
            android:fontFamily="@font/calibri_bold"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:nextFocusRight="@+id/editTexttwo">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTexttwo"
            android:layout_width="40sp"
            android:layout_height="42sp"
            android:layout_marginLeft="10dp"
            android:background="@color/blue"
            android:fontFamily="@font/calibri_bold"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:nextFocusRight="@+id/editTextthree" />

        <EditText
            android:id="@+id/editTextthree"
            android:layout_width="40sp"
            android:layout_height="42sp"
            android:layout_marginLeft="10dp"
            android:background="@color/blue"
            android:fontFamily="@font/calibri_bold"
            android:gravity="center"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="1"
            android:nextFocusRight="@+id/editTextfour" />

        <EditText
            android:id="@+id/editTextfour"
            android:layout_width="40sp"
            android:layout_height="42sp"
            android:layout_marginLeft="10dp"
            android:background="@color/blue"
            android:fontFamily="@font/calibri_bold"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="1" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/calibri_light"
        android:gravity="center"
        android:text="@string/waittext"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/circle"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/calibri_bold"
                android:text="@string/resendtime"
                android:textColor="@color/textblack"
                android:textSize="12sp" />
        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/dr_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/calibri_regular"
        android:gravity="center"
        android:text="@string/nootpreceive"
        android:textColor="#A3A3A3"
        android:visibility="gone" />

    <TextView
        android:id="@+id/resendotp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/calibri_regular"
        android:gravity="center"
        android:text="@string/resendotp"
        android:textColor="#0197D9"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/verify_and_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_shape"
            android:drawableRight="@drawable/ic_play_arrow_white_24dp"
            android:fontFamily="@font/calibri_bold"
            android:text="@string/verifyandcontinue"
            android:textAllCaps="false"
            android:textColor="@color/purewhite" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/homeline" />
    </LinearLayout>

</LinearLayout>