<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_round_corner"
        android:orientation="vertical"
        android:padding="@dimen/twelve_dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/payment_details_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="left"
                android:text="@string/amount_pd" />

            <TextView
                android:id="@+id/tvAmountInNum"
                style="@style/payment_details_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:orientation="horizontal">

            <TextView
                style="@style/pd_row_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="left"
                android:text="@string/amount_in_words_pd" />

            <TextView
                android:id="@+id/tvAmntWords"
                style="@style/pd_row_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:orientation="horizontal">

            <TextView
                style="@style/pd_row_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/paid_date_pd" />

            <TextView
                android:id="@+id/tvDate"
                style="@style/pd_row_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/pd_row_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="left"
                android:text="@string/invoice_name_pd" />

            <TextView
                android:id="@+id/tvInvoiceName"
                style="@style/pd_row_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:orientation="horizontal">

            <TextView
                style="@style/pd_row_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="left"
                android:text="@string/txn_id" />

            <TextView
                android:id="@+id/tvTxnId"
                style="@style/pd_row_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/pd_row_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="left"
                android:text="@string/recipt_no_pd" />

            <TextView
                android:id="@+id/tvReceiptNum"
                style="@style/pd_row_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:orientation="horizontal">

            <TextView
                style="@style/pd_row_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/payment_mode_pd" />

            <TextView
                android:id="@+id/tvPaymentMode"
                style="@style/pd_row_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                style="@style/pd_row_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:gravity="left"
                android:text="@string/invoice_no_pd" />

            <TextView
                android:id="@+id/tvInvoiceNum"
                style="@style/pd_row_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="right"
                android:text="" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>